discussion/kv_engine/133356/133356_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Log throughput for DCP connections at shutdown time

Change-Id: Ia2cd48180146c05b64fdeecb3687274da5771246

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-07-28 10:13:35.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-28 10:34:40.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4881/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4881/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12700/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25347/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/connection.cc:1079:24:
error: use of undeclared identifier "calculateThroughput"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25347/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3519/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/connection.cc:1079:24: error: use of undeclared identifier "calculateThroughput" [clang-diagnostic-error]
        data["send"] = calculateThroughput(totalSend, duration.count());
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/connection.cc:1080:24: error: use of undeclared identifier "calculateThroughput" [clang-diagnostic-error]
        data["recv"] = calculateThroughput(totalRecv, duration.count());
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3519/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/connection.cc:1079:24:
error: use of undeclared identifier "calculateThroughput" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3519/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29312/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3909/ : FAILURE

Compile error at [2020-07-28T10:16:54.049Z] ../kv_engine/daemon/connection.cc:1079:24:
error: use of undeclared identifier "calculateThroughput"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3909/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4802/ : FAILURE

Compile error at [2020-07-28T10:28:05.033Z] ../kv_engine/daemon/connection.cc:1079:24:
error: ?calculateThroughput? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4802/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4985/ : FAILURE

Compile error at [2020-07-28T10:28:42.184Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1193:51:
error: no matching function for call to ?magma::Magma::WriteDocs(Vbid::id_type, MagmaKVStore::WriteOps&, __gnu_cxx::__alloc_traits<std::allocator<Monotonic<long unsigned int> > >::value_type&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(const magma::Magma::WriteOperation&, bool, bool)>&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(MagmaKVStore::WriteOps&)>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4985/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2033/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
